--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "mobile",
-    "slug": "mobile",
+    "name": "DATS App",
+    "slug": "datsapp",
     "version": "1.0.0",
-    "orientation": "landscape",
-    "icon": "./assets/icon.png",
+    "orientation": "portrait",
+    "icon": "./assets/motorcycle.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/motorcycle.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,11 +17,11 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/motorcycle.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.mobile"
+      "package": "com.dan6842.datsapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
