--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-camera-roll/camera-roll": "^7.10.2",
+    "@react-native-community/cameraroll": "^4.1.2",
     "date-fns": "^4.1.0",
     "expo": "~53.0.20",
+    "expo-file-system": "^18.1.11",
     "expo-linear-gradient": "^14.1.5",
+    "expo-media-library": "^17.1.7",
+    "expo-sharing": "^13.1.5",
     "expo-status-bar": "~2.2.3",
     "inflection": "^3.0.2",
     "lz-string": "^1.5.0",
@@ -25,6 +30,7 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^5.6.0",
+    "react-native-view-shot": "^4.0.3",
     "react-router-native": "^6.30.0",
     "rrule": "^2.8.1"
   },
