--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.12"
 dependencies = [
     "my-django-app @ git+https://github.com/TobiasDanielAngelo/django-package.git",
     "channels[daphne] (>=4.3.1,<5.0.0)",
+    "pillow (>=11.3.0,<12.0.0)",
 ]
 
 
