--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "mobx-keystone": "^1.11.4",
     "mobx-react-lite": "^4.1.0",
     "moment": "^2.30.1",
+    "motion": "^12.23.12",
     "numeral": "^2.0.6",
     "react": "^19.1.0",
     "react-datetime": "^3.3.1",
