--- a/mobile/android/settings.gradle
+++ b/mobile/android/settings.gradle
@@ -31,7 +31,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
 }
 expoAutolinking.useExpoModules()
 
-rootProject.name = 'DATS App'
+rootProject.name = 'DATS Bolts'
 
 expoAutolinking.useExpoVersionCatalog()
 
