--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "DATS App",
-    "slug": "datsapp",
+    "name": "DATS Bolts",
+    "slug": "datsboltsapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/motorcycle.png",
@@ -21,7 +21,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.dan6842.datsapp"
+      "package": "com.dan6842.datsbolts"
     },
     "web": {
       "favicon": "./assets/favicon.png"
