--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
     "react-to-pdf": "^2.0.1",
+    "react-to-print": "^3.1.1",
     "recharts": "^3.1.2",
     "rrule": "^2.8.1",
     "sweetalert2": "^11.22.2",
