--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "my-django-app @ git+https://github.com/TobiasDanielAngelo/django-package.git",
     "channels[daphne] (>=4.3.1,<5.0.0)",
     "pillow (>=11.3.0,<12.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)",
 ]
 
 
