--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "expo": "~53.0.20",
     "expo-file-system": "^18.1.11",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-media-library": "^17.1.7",
     "expo-sharing": "^13.1.5",
@@ -27,6 +28,7 @@
     "react-native": "0.79.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-elements": "^3.4.3",
+    "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-view-shot": "^4.0.3",
     "react-router-native": "^6.30.0",
