--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "expo-sharing": "^13.1.5",
     "expo-status-bar": "~2.2.3",
     "inflection": "^3.0.2",
+    "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
     "mobx": "^6.13.7",
     "mobx-keystone": "^1.11.4",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/lodash": "^4.17.20",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
